# EX-AI-MCP-Server

./: .agent_memory.json  .dockerignore  .env.docker  .env.docker.template  .env.example  .env.new  .env.patched  .env.production  .gitignore  .mcp.json  .mcp.json.example  ARCHITECTURAL_CLEANUP_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DOCKER_OPERATIONAL_REPORT.md  Dockerfile  ENVIRONMENT_MANAGEMENT.md  EXAI_MCP_FIX_COMPLETE.md  EXAI_MCP_SETUP_GUIDE.md  EXAI_MEMORY_CONSOLIDATED.json  FINAL_ASSESSMENT.md  FINAL_COMPLETENESS_VERIFICATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_SYSTEM_STATUS.md  GIT_STATUS_QUICK_SUMMARY.md  GIT_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  MYSTERY_SOLVED.md  NEXT_STEPS.md  PRODUCTION_WORK_SUMMARY.txt  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.json  PROVIDER_ANALYSIS.md  PROVIDER_INVESTIGATION_README.md  QUICK_START.md  README.md  REFACTORING_MONITORING_ENDPOINT.md  (+107 more)
.claude/: .mcp.json  .mcp.json.example  AGENT_MIGRATION_PROMPT.md  CLAUDE.md  CONFIGURATION_UPDATE_SUMMARY.md  EXAI_MCP_CONFIGURATION_GUIDE.md  POST_SETUP_INSTRUCTIONS.md  QUICK_REFERENCE_EXAI_MODELS.md
.logs/: kimi_tool_last.json  metrics.jsonl  toolcalls.jsonl
.validation_tmp/: sample_a.txt  sample_b.txt
Daemon/: mcp-config.auggie.json  mcp-config.augmentcode.json  mcp-config.augmentcode.vscode1.json  mcp-config.augmentcode.vscode2.json  mcp-config.claude.json  mcp-config.template.json
Documentations/: 00_START_HERE.md  CURRENT_ARCHITECTURE_ANALYSIS.md  PHASE_2_CRITICAL_FINDING.md
agent-prompts/: agent-1-performance-optimizer.md  agent-2-error-handling-standardizer.md  agent-3-testing-infrastructure.md  agent-4-architecture-modernizer.md  agent-5-cleanup-professionalizer.md
agent-workspace/: test-mcp-request.json  test-mcp.py
baseline_results/: baseline_0.3.0_20251024_223318.json  baseline_0.3.0_20251025_094813.json  baseline_0.3.0_20251025_095049.json
benchmarks/: __init__.py  cleanup_performance.py  run_all_benchmarks.py
clean_later/: ASSESSMENT_REPORT.md  CONTAINER_VALIDATION_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_CURRENT_WORK.md  PHASE3_COMPREHENSIVE_REPORT.md  (+11 more)
(+4736 files in other folders)
